Fix dropdown menu not showing

--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -231,7 +231,10 @@ a:hover {
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+	display:block;
+	position: fixed;
+}
 
 
 /*RSVP FORM*/
